登陆界面和loading改版

--- a/devapp/index.html
+++ b/devapp/index.html
@@ -12,6 +12,7 @@
 
   <div class="splash-screen row center-xs middle-xs">
     <div class="logo"></div>
+    <img src="../assets/images/bg_bottom.png" class="login-bg-bottom" width="100%" />
   </div>
 
   <script src="app.js"></script>
