左侧聊天记录排序

--- a/devapp/index.html
+++ b/devapp/index.html
@@ -23,7 +23,7 @@
     document.addEventListener('dragEnter', function (e) {
       window.messenger.sendToElectron('active-focus');
     });
-    window.location.href = '/#/auth';
+    // window.location.href = '/#/auth';
   </script>
 </body>
 </html>
